[Feature] Display images side-by-side

--- a/notebook/review_writer.ipynb
+++ b/notebook/review_writer.ipynb
@@ -17,16 +17,33 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Repo path: E:\\_codes\\GPT-Paper\n",
+      "Repo path: [E:\\_codes\\GPT-Paper]\n",
       "Current directory: [E:\\_codes\\GPT-Paper\\notebook]\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1fffb29eccee4c6483bae71e013743c0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Image(value=b'\\x89PNG\\r\\n\\x1a\\n\\x00\\x00\\x00\\rIHDR\\x00\\x00\\t\\xb1\\x00\\x00\\x0c\\xbc\\x08\\x02\\x00\\x00…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "import os\n",
     "import sys\n",
     "from pathlib import Path\n",
-    "from IPython.display import Image, display\n",
+    "from IPython.display import display\n",
+    "from ipywidgets import Image as wImage\n",
+    "from ipywidgets import HBox\n",
+    "\n",
     "repo_path = Path(os.path.abspath(\".\")).parent\n",
     "if str(repo_path) not in sys.path:\n",
     "    sys.path.append(str(repo_path))\n",
@@ -38,13 +55,23 @@
     "\n",
     "logger.note(f\"Repo path: [{repo_path}]\")\n",
     "logger.note(f\"Current directory: [{current_directory}]\")\n",
+    "\n",
     "pdf_dir = \"Deep learning predicts postsurgical recurrence of hepatocellular carcinoma from digital histopathologic images\"\n",
-    "display(Image(filename=Path(current_directory).parents[1]))\n"
+    "\n",
+    "image_paths = [\n",
+    "    repo_path / \"pdfs\" / pdf_dir / \"pages_ordered\" / f\"page_{i+1:0>2}.png\"\n",
+    "    for i in range(3)\n",
+    "]\n",
+    "images = [\n",
+    "    wImage(value=image_path.open(\"rb\").read(), format='png', width=300)\n",
+    "    for image_path in image_paths\n",
+    "]\n",
+    "display(HBox(images))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 39,
    "id": "d3e31613-fe95-4129-a485-570d17be270e",
    "metadata": {
     "editable": true,
