[Enhance] Set PYTORCH_CUDA_ALLOC_CONF to avoid memory exceed

--- a/notebook/review_writer.ipynb
+++ b/notebook/review_writer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "id": "1739b204-98a3-4775-ba26-c27609c98816",
    "metadata": {
     "editable": true,
@@ -24,12 +24,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1fffb29eccee4c6483bae71e013743c0",
+       "model_id": "3b9f1fad8b004e6796f17f4d9416aaaa",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(Image(value=b'\\x89PNG\\r\\n\\x1a\\n\\x00\\x00\\x00\\rIHDR\\x00\\x00\\t\\xb1\\x00\\x00\\x0c\\xbc\\x08\\x02\\x00\\x00…"
+       "HBox(children=(Image(value=b'\\x89PNG\\r\\n\\x1a\\n\\x00\\x00\\x00\\rIHDR\\x00\\x00\\t\\xf6\\x00\\x00\\x0c\\xe4\\x08\\x02\\x00\\x00…"
       ]
      },
      "metadata": {},
@@ -42,7 +42,7 @@
     "from pathlib import Path\n",
     "from IPython.display import display\n",
     "from ipywidgets import Image as wImage\n",
-    "from ipywidgets import HBox\n",
+    "from ipywidgets import HBox, Layout\n",
     "\n",
     "repo_path = Path(os.path.abspath(\".\")).parent\n",
     "if str(repo_path) not in sys.path:\n",
@@ -56,16 +56,19 @@
     "logger.note(f\"Repo path: [{repo_path}]\")\n",
     "logger.note(f\"Current directory: [{current_directory}]\")\n",
     "\n",
-    "pdf_dir = \"Deep learning predicts postsurgical recurrence of hepatocellular carcinoma from digital histopathologic images\"\n",
+    "# pdf_dir = \"Deep learning predicts postsurgical recurrence of hepatocellular carcinoma from digital histopathologic images\"\n",
+    "\n",
+    "pdf_dir = \"2308.09687 - Graph of Thoughts\"\n",
     "\n",
     "image_paths = [\n",
-    "    repo_path / \"pdfs\" / pdf_dir / \"pages_ordered\" / f\"page_{i+1:0>2}.png\"\n",
-    "    for i in range(3)\n",
+    "    f\n",
+    "    for f in (repo_path / \"pdfs\" / pdf_dir / \"queries\" / \"Tree of Thoughts vs Graph of Thoughts\").glob(\"*.png\")\n",
     "]\n",
     "images = [\n",
-    "    wImage(value=image_path.open(\"rb\").read(), format='png', width=300)\n",
+    "    wImage(value=image_path.open(\"rb\").read(), format='png', width=400)\n",
     "    for image_path in image_paths\n",
     "]\n",
+    "\n",
     "display(HBox(images))"
    ]
   },
