[Refactor] Clean notebook of review_writer

--- a/notebook/review_writer.ipynb
+++ b/notebook/review_writer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "id": "1739b204-98a3-4775-ba26-c27609c98816",
    "metadata": {
     "editable": true,
@@ -14,6 +14,13 @@
    },
    "outputs": [
     {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Once deleted, variables cannot be recovered. Proceed (y/[n])?  y\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
@@ -24,12 +31,24 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3b9f1fad8b004e6796f17f4d9416aaaa",
+       "model_id": "7201bbfd67744c51b70189588699b50c",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "HBox(children=(Image(value=b'\\x89PNG\\r\\n\\x1a\\n\\x00\\x00\\x00\\rIHDR\\x00\\x00\\t\\xf6\\x00\\x00\\x0c\\xe4\\x08\\x02\\x00\\x00…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<img src onerror=\"var cell = this.closest('.jp-CodeCell');var editor = cell.querySelector('.jp-Editor');editor.style.background='black';this.parentNode.removeChild(this)\" style=\"display:none\">"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
       ]
      },
      "metadata": {},
@@ -69,76 +88,14 @@
     "    for image_path in image_paths\n",
     "]\n",
     "\n",
-    "display(HBox(images))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "id": "d3e31613-fe95-4129-a485-570d17be270e",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "from IPython.display import HTML, display\n",
-    "from IPython.core.magic import register_cell_magic\n",
-    "\n",
-    "def set_background(color):    \n",
-    "    script = (\n",
-    "        \"var cell = this.closest('.jp-CodeCell');\"\n",
-    "        \"var editor = cell.querySelector('.jp-Editor');\"\n",
-    "        \"editor.style.background='{}';\"\n",
-    "        \"this.parentNode.removeChild(this)\"\n",
-    "    ).format(color)\n",
-    "    \n",
-    "    display(HTML(f'<img src onerror=\"{script}\" style=\"display:none\">'))\n",
-    "\n",
-    "@register_cell_magic\n",
-    "def bg(color, cell):\n",
-    "    set_background(color)\n",
-    "    return eval(cell)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "2b5907c4-c6bf-4a01-a9eb-af5707da9f8d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<img src onerror=\"var cell = this.closest('.jp-CodeCell');var editor = cell.querySelector('.jp-Editor');editor.style.background='#0a0a0a';this.parentNode.removeChild(this)\" style=\"display:none\">"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Testing set_background\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%bg #0a0a0a\n",
-    "logger.info(\"Testing set_background\")"
+    "display(HBox(images))\n",
+    "set_background(\"black\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ce59c2f-cf7e-433c-ab34-10f458574573",
+   "id": "ce27c493-c90d-43c3-9abb-18907b3ba3ff",
    "metadata": {},
    "outputs": [],
    "source": []
