--- a/notebook/review_doc.ipynb
+++ b/notebook/review_doc.ipynb
@@ -2,25 +2,31 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cf4e3502-21c9-46d8-aaa8-7d8e55b672af",
-   "metadata": {},
+   "id": "349fb813-865b-4dc0-be06-5c61928283ef",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
-    "Unraveling the “black-box” of artificial intelligence-based pathological analysis of liver cancer\n",
+    "Unraveling the “black-box” of artificial intelligence-based pathological analysis of liver cancer\r\n",
     "===\r\n",
-    "\n",
-    "## Current advances of AI-based approaches for clinical management of liver cancer\r",
+    "\r\n",
+    "## Current advances of AI-based approaches for clinical management of liver cancer\r\n",
     "\r\n",
     "### AI-based prognostication of liver cancer\r\n",
     "\r\n",
-    "### Molecular profiling of liver cancer via I \r\n",
+    "### Molecular profiling of liver cancer via AI\r\n",
     "\r\n",
-    "### Exploring predictive indicators for therap resp\r\n",
+    "### Exploring predictive indicators for therapy response\r\n",
     "\r\n",
     "## Current challenges limiting AI-based approaches in the management of liver cancer\r\n",
     "\r\n",
     "(One paragraph highlighting the urgent need to explain the “black box” of deeplearning)\r\n",
     "\r\n",
-    "## Strategies for unraveling the “black-box” ofAI-based  \r\n",
+    "## Strategies for unraveling the “black-box” of AI-based\r\n",
     "\r\n",
     "### Model-based explanation\r\n",
     "1. Support vector machine or random forests vs. deep learning\r\n",
@@ -29,33 +35,24 @@
     "   a. Image captioning\r\n",
     "   b. Image captioning with visual explanation\r\n",
     "4. Example-based explanation \r\n",
-    "   a. Triplet net#rk\r\n",
+    "   a. Triplet network\r\n",
     "   b. Prototypes\r\n",
     "\r\n",
     "### Post hoc explanation\r\n",
-    "\r\n",
     "1. Visual explanation (saliency mapping, pathologist-in-the-loop)\r\n",
-    "    a. Backpropagation-based approaches\r\n",
-    "Including class activation mapping (CAM) and gradient-weighted class activation mapping (Grad-CAM)\r\n",
-    "    b. Perturbation-based approaches\r\n",
-    "Including Occlusion sensitivity map (OSM), local interpretable model-agnostic explannations (LIME)\r\n",
-    "    c. Multiple instance learning-based approaches\r\n",
+    "   a. Backpropagation-based approaches\r\n",
+    "      Including class activation mapping (CAM) and gradient-weighted class activation mapping (Grad-CAM)\r\n",
+    "   b. Perturbation-based approaches\r\n",
+    "      Including Occlusion sensitivity map (OSM), local interpretable model-agnostic explannations (LIME)\r\n",
+    "   c. Multiple instance learning-based approaches\r\n",
     "2. Textual explanation\r\n",
     "   Testing with concept activation vectors (TCAV)\r\n",
-    "4.\tExample-based exlanation\r\n",
-    "    Influence functions\r\n",
+    "3. Example-based explanation\r\n",
+    "   a. Influence functions\r\n",
+    "   b. ...\r\n",
     "\r\n",
-    "## Conclusion and future applications\r\n",
-    "lusion and future applications.\r\n"
+    "# Conclusion and future applications"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "000bdfc2-1941-4249-b0a7-b32895f075c0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
