[Feature] List pdfs with checkboxes

--- a/notebook/review_doc.ipynb
+++ b/notebook/review_doc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "349fb813-865b-4dc0-be06-5c61928283ef",
+   "id": "021c892e-5423-4cc1-9d0e-66ef7b4c6903",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -11,48 +11,91 @@
     "tags": []
    },
    "source": [
-    "Unraveling the “black-box” of artificial intelligence-based pathological analysis of liver cancer\r\n",
-    "===\r\n",
-    "\r\n",
-    "## Current advances of AI-based approaches for clinical management of liver cancer\r\n",
-    "\r\n",
-    "### AI-based prognostication of liver cancer\r\n",
-    "\r\n",
-    "### Molecular profiling of liver cancer via AI\r\n",
-    "\r\n",
-    "### Exploring predictive indicators for therapy response\r\n",
-    "\r\n",
-    "## Current challenges limiting AI-based approaches in the management of liver cancer\r\n",
-    "\r\n",
-    "(One paragraph highlighting the urgent need to explain the “black box” of deeplearning)\r\n",
-    "\r\n",
-    "## Strategies for unraveling the “black-box” of AI-based\r\n",
-    "\r\n",
-    "### Model-based explanation\r\n",
-    "1. Support vector machine or random forests vs. deep learning\r\n",
-    "2. Supervised learning vs. weakly supervised learning vs. unsupervised learning\r\n",
-    "3. Textual explanation\r\n",
-    "   a. Image captioning\r\n",
-    "   b. Image captioning with visual explanation\r\n",
-    "4. Example-based explanation \r\n",
-    "   a. Triplet network\r\n",
-    "   b. Prototypes\r\n",
-    "\r\n",
-    "### Post hoc explanation\r\n",
-    "1. Visual explanation (saliency mapping, pathologist-in-the-loop)\r\n",
-    "   a. Backpropagation-based approaches\r\n",
-    "      Including class activation mapping (CAM) and gradient-weighted class activation mapping (Grad-CAM)\r\n",
-    "   b. Perturbation-based approaches\r\n",
-    "      Including Occlusion sensitivity map (OSM), local interpretable model-agnostic explannations (LIME)\r\n",
-    "   c. Multiple instance learning-based approaches\r\n",
-    "2. Textual explanation\r\n",
-    "   Testing with concept activation vectors (TCAV)\r\n",
-    "3. Example-based explanation\r\n",
-    "   a. Influence functions\r\n",
-    "   b. ...\r\n",
-    "\r\n",
-    "# Conclusion and future applications"
+    "# Unraveling the “black-box” of artificial intelligence-based pathological analysis of liver cancerapplications"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3709179-f1f3-4d0a-acc4-0848b8289664",
+   "metadata": {},
+   "source": [
+    "## Current advances of AI-based approaches for clinical management of liver cancer\n",
+    "\n",
+    "### AI-based prognostication of liver cancer\n",
+    "\n",
+    "### Molecular profiling of liver cancer via AI\n",
+    "\n",
+    "### Exploring predictive indicators for therapy response\n",
+    "\n",
+    "## Current challenges limiting AI-based approaches in the management of liver cancer\n",
+    "\n",
+    "(One paragraph highlighting the urgent need to explain the “bldeep learningcre applications"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c3b654e-adc4-4808-a0de-45d61387cfdf",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "source": [
+    "## Strategies for unraveling the “black-box” of AI-based\n",
+    "\n",
+    "### Model-based explanation\n",
+    "1. Support vector machine or random forests vs. deep learning\n",
+    "2. Supervised learning vs. weakly supervised learning vs. unsupervised learning\n",
+    "3. Textual explanation\n",
+    "   a. Image captioning\n",
+    "   b. Image captioning with visual explanation\n",
+    "4. Example-based explanation \n",
+    "   a. Triplet network\n",
+    "   b. Prototypes\n",
+    "\n",
+    "### Post hoc explanation\n",
+    "1. Visual explanation (saliency mapping, pathologist-in-the-loop)\n",
+    "   a. Backpropagation-based approaches\n",
+    "      Including class activation mapping (CAM) and gradient-weighted class activation mapping (Grad-CAM)\n",
+    "   b. Perturbation-based approaches\n",
+    "      Including Occlusion sensitivity map (OSM), local interpretable model-agnostic explannations (LIME)\n",
+    "   c. Multiple instance learning-based approaches\n",
+    "2. Textual explanation\n",
+    "   Testing with concept activation vectors (TCAV)\n",
+    "3. Example-based explanation\n",
+    "   a. Influence functions\n",
+    "   b. ..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "689c70db-430c-423d-bfb1-1c5b78c224ac",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "source": [
+    "## Conclusion and future applications"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7cf23e5-7780-467c-826c-c45966197d2b",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
