--- a/notebook/review_writer.ipynb
+++ b/notebook/review_writer.ipynb
@@ -94,8 +94,382 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 46,
+   "id": "81278999-a9bc-4416-9a55-c6f7306e049e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PDFs root: E:\\_codes\\GPT-Paper\\pdfs\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "70426b6b85234eb48c9dc5272996e1a7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Checkbox(value=False, description='2308.09687 - Graph of Thoughts.pdf', indent=False, layout=Layout(width='aut…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fa504ba033db402cabe427261fa9a76d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Checkbox(value=False, description='Artificial Intelligence in Hepatology Ready for the Primetime.pdf', indent=…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c4ad215c27b14d30a284190dcab71e54",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Checkbox(value=False, description='Artificial intelligence in liver diseases Improving diagnostics, prognostic…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e08aa7c915d64e31a5d77cf8da8ac9cb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Checkbox(value=False, description='Deep learning for evaluation of microvascular invasion in hepatocellular ca…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5296e7fa595d4534b5ae0c5deead6b82",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Checkbox(value=False, description='Deep learning for prediction of hepatocellular carcinoma recurrence after r…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "03208acc5a944955b0a56ce3a57c5b5d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Checkbox(value=False, description='Deep learning in hepatocellular carcinoma Current status and future perspec…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5410dbef205746adb3fef42f2b4e1687",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Checkbox(value=False, description='Deep learning in histopathology the path to the clinics.pdf', indent=False,…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "548cf4e281c24caab79cbb1437492a7c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Checkbox(value=False, description='Deep learning predicts postsurgical recurrence of hepatocellular carcinoma …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "af0b2ce2148946dd8537564d739f9a54",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Checkbox(value=False, description='Development of a deep pathomics score for predicting hepatocellular carcino…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8048b56499b6480abeb588aab381697e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Checkbox(value=False, description='Explainable medical imaging AI needs human-centered design a systematic rev…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a225d750fb2646fd817b15b7872e5b95",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Checkbox(value=False, description='Exploring pathological signatures for predicting the recurrence of early-st…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "132a4dd31b0d400f87155f1afba57185",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Checkbox(value=False, description='GUT 2020 Exploring prognostic indicators in the pathological images of hepa…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e867a52f5a594fed9692dd31bdbf2fc7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Checkbox(value=False, description='HEP 2020 Predicting survival after hepatocellular carcinoma resection using…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c924470bc096402eaf283dcda18797ee",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Checkbox(value=False, description='Implementation of deep learning in liver pathology optimizes diagnosis of b…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "244c528f669548c1b046bad98f0decad",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Checkbox(value=False, description='JOH 2017 Histological Subtypes of Hepatocellular Carcinoma Are Related To G…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4830fdcb662c4a1bb34cbe630f74b9cb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Checkbox(value=False, description='JOH 2022 Artificial intelligence for the prevention and clinical management…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "11bbd1430781455cad9543a5ee6c6493",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Checkbox(value=False, description='Med Image Anal. 2022 Explainable artificial intelligence (XAI) in deep lear…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "45cea42b828a46dcae6d41ecb25d87e2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Checkbox(value=False, description='Multi-task deep learning network to predict future macrovascular invasion i…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2d6657d8f511461a8399396c0d5f3b33",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Checkbox(value=False, description='Nature Cancer 2020 Pan-cancer computational histopathology reveals.pdf', in…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3e6a2177ca084099a4e8432b329687d4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Checkbox(value=False, description='Novel deep learning-based solution for identification of prognostic subgrou…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a78725bc481f4eb296ab222d450cc0ac",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Checkbox(value=False, description='NPJ 2020 Classification and mutation prediction based on.pdf', indent=False…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "12813618fd32490e8bf62be499ac7b16",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Checkbox(value=False, description='Quantitative analysis of artificial intelligence on liver cancer.pdf', inde…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "35a27bfe0a804cf09283eea4a673e51d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Checkbox(value=False, description='Utilization of model-agnostic explainable artificial intelligence framework…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import ipywidgets as widgets\n",
+    "import os\n",
+    "from pathlib import Path\n",
+    "pdf_root = Path(os.path.abspath(\".\")).parent / \"pdfs\"\n",
+    "print(f\"PDFs root: {str(pdf_root)}\")\n",
+    "\n",
+    "pdf_paths = pdf_root.glob(\"*.pdf\")\n",
+    "pdf_path_checkboxes = [\n",
+    "    widgets.Checkbox(value=False, description=pdf_path.name, disabled=False, indent=False, layout=widgets.Layout(width='auto'))\n",
+    "    for pdf_path in pdf_paths\n",
+    "]\n",
+    "\n",
+    "for pdf_path_checkbox in pdf_path_checkboxes:\n",
+    "    display(pdf_path_checkbox)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "dc07ad82-2aae-4114-b21d-bbb88b9ec642",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2308.09687 - Graph of Thoughts.pdf\n",
+      "Artificial Intelligence in Hepatology Ready for the Primetime.pdf\n"
+     ]
+    }
+   ],
+   "source": [
+    "for pdf_path_checkbox in pdf_path_checkboxes:\n",
+    "    if pdf_path_checkbox.value:\n",
+    "        print(pdf_path_checkbox.description)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "ce27c493-c90d-43c3-9abb-18907b3ba3ff",
+   "id": "52f3412b-4807-4014-9b71-2af6362a70c6",
    "metadata": {},
    "outputs": [],
    "source": []
